# MatriceGaussJordan

./: CMakeLists.txt  README.md  Rapport_projet.docx  main.cpp
code/: CException.cpp  CException.h  CMakeLists.txt  CMatrice.cpp  CMatrice.h  CMatriceCore.cpp  CMatriceCore.h  CMatriceExtractor.cpp  CMatriceExtractor.h  CMatriceGaussJordan.cpp  CMatriceGaussJordan.h  CParser.cpp  CParser.h  CParserMatrice.cpp  CParserMatrice.h
lib/: test.txt
tests/: CMakeLists.txt  tests.cpp
tests/matrice/: CMakeLists.txt  testsMatrice.cpp
tests/matriceGJ/: CMakeLists.txt  testsMatriceGaussJordan.cpp
